--- a/css/layout.css
+++ b/css/layout.css
@@ -2,7 +2,7 @@ body
 {
     background-color: white;
     color: grey;
-    font-family: 'Times New Roman';
+    font-family: 'Arial';
 }
 
 .ttl
@@ -20,6 +20,7 @@ footer
     width: 100%;
     background-color: grey;
     color: white;
+    font-size: 16px;
     text-align: center;
 }
 
